--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^2.0.0-beta.5",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
+    "connect-history-api-fallback": "^1.5.0",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "eslint": "^4.19.1",
