--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^2.0.0-beta.5",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "connect-history-api-fallback": "^1.5.0",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
@@ -24,6 +25,7 @@
     "express-jwt": "^5.3.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "helmet": "^3.13.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.4"
   }
